--- a/web-object-detector/package.json
+++ b/web-object-detector/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@techstark/opencv-js": "^4.7.0-release.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,9 +49,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
     "@craco/craco": "^7.1.0",
     "copy-webpack-plugin": "^11.0.0",
+    "gh-pages": "^5.0.0",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
   }
